added try/catch for the errors

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="error" id="error"></div>
 <div class="container" id="container">
 <!--    <div class="user">-->
 <!--        <h3 class="name">Leanne Graham</h3>-->
