--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-<div class="container">
-    <h2 class="timer" id="timer"></h2>
-    <button class="stop button" id="stop">Stop</button>
-    <button class="continue button" id="continue">Continue</button>
+<div class="container" id="container">
+<!--    <h2 class="timer" id="timer"></h2>-->
+<!--    <button class="stop button" id="stop">Stop</button>-->
+<!--    <button class="continue button" id="continue">Continue</button>-->
     <script rel="script" src="script.js"></script>
 </div>
 </body>
