--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container">
-    <h2 class="title" >События</h2>
-    <div class="outer">
-        <span id="top-text">x: 0, y: 0</span>
-        <div class="block" id="block"></div>
-        <span id="bottom-text">x: 0, y: 0</span>
-    </div>
+<div class="container" id="container">
+<!--    <h2 class="title" >События</h2>-->
+<!--    <div class="outer">-->
+<!--        <span id="top-text">x: 0, y: 0</span>-->
+<!--        <div class="block" id="block"></div>-->
+<!--        <span id="bottom-text">x: 0, y: 0</span>-->
+<!--    </div>-->
 </div>
 <script rel="script" src="script.js"></script>
 </body>
